Fix overflowing button in pop up modal

--- a/style/popup-modal.css
+++ b/style/popup-modal.css
@@ -18,8 +18,8 @@
   flex-direction: column;
   gap: 10px;
   width: 100%;
-  height: 100%;
-  /* transition: 0.2s ease-in-out; */
+  height: 120%;
+  transition: 0.2s ease-in-out;
 }
 
 .modal-wrapper {
@@ -34,13 +34,13 @@
   width: 100vw;
   min-height: 100vh;
   transition: 0.35s ease-in-out;
-  visibility: hidden;
+  display: none;
   overflow-y: scroll;
   overflow-x: hidden;
 }
 
 .modal-wrapper.active {
-  visibility: visible;
+  display: block;
 }
 
 .sample.mod {
